--- a/index.html
+++ b/index.html
@@ -1,9 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css\Style.css">
     <title>Ala Sohil Batarseh</title>
 </head>
 <body>
-<img src="Assets\PPP.jpg">
+        <header>
+            <img src="Assets\PPP.jpg">
+            <div class="AlaIn"> Ala Sohil Batarseh <br> 11 March 2000 <br> +971501235160 <br> alasohil@gmail.com</div>
+        </header>
+<div class="Persi">
+<h3>Personal Information</h3>
+<ul>
+    <li><b>Age: </b> 24</li>
+    <li><b>Languages: </b> Arabic, English</li>
+    <li><b>Nationality: </b> Jordanian </li>
+</ul>
+<h3>Technical Skills</h3>
+<ul>
+    <li>Proficient in Microsoft Office Suite (Word, Excel, PowerPoint)</li>
+    <li>Programming languages: Python, Java, C++</li>
+    <li>Web development: HTML, CSS, JavaScript</li>
+    <li>Database management: SQL, MySQL, MongoDB</li>
+</ul>
+<h3>Communication Skills</h3>
+<ul>
+    <li>Strong written and verbal communication</li>
+    <li>Effective presentation and public speaking</li>
+    <li>Fluent in both English and Arabic</li>
+</ul>
+</div>
+<div class="PersE">
+<h3>Education</h3>
+<ul>
+    <li> Elite Private School <br> Graduate 2017</li>
+    <li> Abu Dhabi University <br> 2017 - Ongoing <br> Bachelor Of Cybersecurity <br>Engineering</li>
+</ul>
+<h3>Experience</h3>
+<ul>
+    <li>Host, Bounce <br> December 2020 - September 2021</li>
+    <li>Host, Air Maniacs <br> October 2021 - August 2022</li>
+    <li>Usher, Formula 1 <br> December 2022</li>
+</ul>
+</div>
+<div class="Persi">
+<h3>About my mindset</h3>
+<p>A successful mindset is built on belief, perseverance, and growth. Embrace challenges <br>
+    as opportunities, learn from setbacks, <br>
+    and stay committed to your goals. Success begins within you—nurture it every day.</p>
+</div>
 </body>
 </html>
