--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="AlaSohil.github.io/Style.css">
+    <link rel="stylesheet" href="Style.css">
     <title>Ala Sohil Batarseh</title>
 </head>
 <body>
