--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
         <header>
-            <img src="AlaSohil.github.io/PPP.jpg">
+            <img src="PPP.jpg">
             <div class="AlaIn"> Ala Sohil Batarseh <br> 11 March 2000 <br> +9715401723561860 <br> alasoihioil@gmail.com</div>
         </header>
 <div class="Persi">
